# Absenteismo

./: .gitignore  Abs.py  pyproject.toml
